[tool.poetry]
name = "daylight-earth-graph"
version = "0.1.0"
description = ""
authors = ["johnymontana <lyonwj@gmail.com>"]
readme = "README.md"
packages = [{include = "daylight_earth_graph"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.5.1"
pyarrow = "^10.0.0"
tabulate = "^0.9.0"
neo4j = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
